--- a/src/css/style.css
+++ b/src/css/style.css
@@ -22,6 +22,10 @@ header {
   display: inline-table;
 }
 
+#edenLogo {
+  cursor: pointer;
+}
+
 .container {
   display: flex;
   justify-content: space-between;
@@ -64,16 +68,16 @@ nav ul {
 
 nav ul li {
   margin: 0 15px;
-  color: #0073ff;
+  color: #2825C8;
 }
 
 nav ul li a:hover {
-  color: #ffffff;
+  color: #22216C;
   cursor: pointer;
 }
 
 #logout {
-  background-color: #007bff;
+  background-color: #674CF7;
   color: white;
   border: none;
   cursor: pointer;
@@ -81,7 +85,7 @@ nav ul li a:hover {
 }
 
 #logout:hover {
-  background-color: #0056b3;
+  background-color: #2825C8;
 }
 
 main {
