--- a/src/css/media-query.css
+++ b/src/css/media-query.css
@@ -14,19 +14,13 @@
     flex-direction: column;
   }
 
-  #botao-dashboard {
-    margin-top: 10rem;
+  main {
+    margin-top: 15rem;
   }
 }
 
 @media (max-width: 437px) {
   h1 {
     font-size: 1.5rem;
-  }
-}
-
-@media (max-width: 220px) {
-  #botao-dashboard {
-    margin-top: 11rem;
   }
 }
