--- a/src/css/style.css
+++ b/src/css/style.css
@@ -88,6 +88,7 @@ nav ul li a:hover {
 
 #logout {
   padding: 10px;
+  margin-right: 1rem;
 }
 
 main {
@@ -116,7 +117,6 @@ main {
 
 a {
   text-decoration: none;
-  padding: 0.6rem;
 }
 
 p { 
